--- a/tasks/configure.yml
+++ b/tasks/configure.yml
@@ -1,11 +1,5 @@
 ---
 
-- name: Check if firewalld service is running
-  command: "/usr/bin/systemctl status firewalld"
-  register: service_status_firewall
-  failed_when: service_status_firewall.rc == 2
-  changed_when: false
-
 - name: Configure firewall services
   firewalld:
     service: "{{ item }}"
@@ -15,7 +9,9 @@
     state: enabled
   with_items:
     - "{{ spacewalk_firewall.services }}"
-  when: '"Active: active" in service_status_firewall.stdout'
+  when: firewalld_enabled
+  tags:
+    - firewall
 
 - name: Configure firewall ports
   firewalld:
@@ -26,10 +22,7 @@
     state: enabled
   with_items:
     - "{{ spacewalk_firewall.ports }}"
-  when: '"Active: active" in service_status_firewall.stdout'
+  when: firewalld_enabled
+  tags:
+    - firewall
 
-- name: Add entry to /etc/hosts
-  lineinfile:
-    dest: /etc/hosts
-    line: "{{ ansible_default_ipv4.address }} {{ ansible_fqdn }} {{ ansible_hostname }}"
-    state: present
