Add headers & thresholds

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,7 +1,7 @@
 ---
 # defaults file for spacewalk
 
-spacewalk_agent_role_git_repo: https://github.com/SecurityShift/ansible-role-icinga-agent
+spacewalk_role_git_repo: https://github.com/SecurityShift/ansible-role-icinga-agent
 
 spacewalk_repo:
   - repoid: spacewalk
